added temp screensaver

--- a/index.html
+++ b/index.html
@@ -15,90 +15,35 @@
   <div id="busyUIView"></div>
   <div id="UIViews" class="views">
 
-    <!-- VIEW -->
-    <!-- HOME VIEW -->
+    <!-- HOME VIEW / SCREENSAVER VIEW  -->
     <div id="home" class="view" data-statusbar="white" data-target="homeMenu" data-type="controller">
+      <div class="screensaver-main-content">
+Hello
+WOrld
+      </div>
+        </div>
 
-    </div>
+        <!-- SEARCH PRELOADER VIEW -->
+        <div id="search_preloader" class="view" data-statusbar="white" >
 
+        </div>
 
-    <!-- NEW VIEW -->
-    <!-- SEARCH PRELOADER VIEW -->
-    <div id="search_preloader" class="view" data-statusbar="white" >
+        <!--TRAVELLER PICKER MODAL-->
+        <div id="modalTravellerPicker">
 
-    </div>
+        </div>
 
-    <!-- NEW VIEW -->
-    <!-- SEARCH RESULT VIEW -->
-    <div id="searchResult" class="view" data-statusbar="white" >
-
-    </div>
-
-
-    <!-- NEW VIEW -->
-    <!-- FLIGHT DETAIL VIEW -->
-    <div id="flightDetail" class="view" data-statusbar="white" >
-
-    </div>
-
-    <!-- END TRAVELLER -->
-
-    <!-- NEW VIEW -->
-    <!-- FLIGHT DETAIL VIEW -->
-    <div id="travellerDetail" class="view" data-statusbar="white" >
-
-    </div>
-
-    <!-- DATE PICKER MODAL -->
-    <div id="modalDatepicker" class="">
-
-    </div>
-
-
-    <!--TRAVELLER PICKER MODAL-->
-
-    <div id="modalTravellerPicker">
-
-    </div>
-
-    <!--CABIN CLASS PICKER-->
-
-    <div id="modalCabinClassPicker">
-
-    </div>
-
-    <!--TRAVELLER PICKER DATE-->
-    <div id="modalTravellerDatepicker">
-
-    </div>
-
-    <!--CONTACT LIST-->
-    <div id="contactsList" class="contacts_list">
-
-    </div>
-
-    <!--FILTER RESULT PICKER-->
-    <div id="modalFilterResult">
-
-    </div>
-
-
-    <!--SIDENAV-->
-    <div id="homeMenu">
-
-    </div>
-
-    <audio id="soundPlayer"></audio>
-    <script src="cordova.js"></script>
-    <script src="views/views.js"></script>
-    <script src="gsap/css.js"></script>
-    <script src="gsap/easepack.js"></script>
-    <script src="gsap/TweenLite.min.js"></script>
-    <script src="gsap/CSSPlugin.min.js"></script>
-    <script src="gsap/ScrollToPlugin.min.js"></script>
-    <script src="assets/js/fastclick.js"></script>
-    <script src="assets/js/jquery-3.2.1.js"></script>
-    <script src="assets/js/app.js"></script>
-  </div>
-</body>
-</html>
+        <audio id="soundPlayer"></audio>
+        <script src="cordova.js"></script>
+        <script src="views/views.js"></script>
+        <script src="gsap/css.js"></script>
+        <script src="gsap/easepack.js"></script>
+        <script src="gsap/TweenLite.min.js"></script>
+        <script src="gsap/CSSPlugin.min.js"></script>
+        <script src="gsap/ScrollToPlugin.min.js"></script>
+        <script src="assets/js/fastclick.js"></script>
+        <script src="assets/js/jquery-3.2.1.js"></script>
+        <script src="assets/js/app.js"></script>
+      </div>
+    </body>
+    </html>
