added card selector for bundles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/app.css" type="text/css"/>
   <link rel="stylesheet" href="views/views.css" type="text/css"/>
   <!-- CUSTOM STYLE -->
-  <link rel="stylesheet" href="../../css/alertify.min.css"/>
+  <!-- <link rel="stylesheet" href="../../css/alertify.min.css"/> -->
   <!--  -->
 
 </head>
@@ -190,7 +190,7 @@
 
         <div class="card-group">
           <!-- CARD 1 -->
-          <div class="card card-active" onclick="app.showModalBundleDetail()">
+          <div id="card-bundle-1" class="card card-active" onclick="app.showModalBundleDetail('1',6)">
             <div class="card-content">
               <img class="card-image" src="assets/image/healthyfood.png">
               <div class="card-caption">
@@ -202,7 +202,7 @@
           </div>
 
           <!-- CARD 2 -->
-          <div class="card" onclick="app.showModalBundleDetail()">
+          <div id="card-bundle-2" class="card" onclick="app.showModalBundleDetail('2',6)">
             <div class="card-content">
               <img class="card-image" src="assets/image/healthyfood.png">
               <div class="card-caption">
@@ -214,7 +214,7 @@
           </div>
 
           <!-- CARD 3 -->
-          <div class="card" onclick="app.showModalBundleDetail()">
+          <div id="card-bundle-3" class="card" onclick="app.showModalBundleDetail('3',6)">
             <div class="card-content">
               <img class="card-image" src="assets/image/healthyfood.png">
               <div class="card-caption">
@@ -229,7 +229,7 @@
         <!-- SECOND CARD GRID -->
         <div class="card-group">
           <!-- CARD 4 -->
-          <div class="card" onclick="app.showModalBundleDetail()">
+          <div id="card-bundle-4" class="card" onclick="app.showModalBundleDetail('4',6)">
             <div class="card-content">
               <img class="card-image" src="assets/image/healthyfood.png">
               <div class="card-caption">
@@ -241,7 +241,7 @@
           </div>
 
           <!-- CARD 5 -->
-          <div class="card" onclick="app.showModalBundleDetail()">
+          <div id="card-bundle-5" class="card" onclick="app.showModalBundleDetail('5',6)">
             <div class="card-content">
               <img class="card-image" src="assets/image/healthyfood.png">
               <div class="card-caption">
@@ -254,7 +254,7 @@
           </div>
 
           <!-- CARD 6 -->
-          <div class="card" onclick="app.showModalBundleDetail()">
+          <div id="card-bundle-6" class="card" onclick="app.showModalBundleDetail('6', 6)">
             <div class="card-content">
               <img class="card-image" src="assets/image/healthyfood.png">
               <div class="card-caption">
@@ -348,8 +348,8 @@
     <script src="assets/js/jquery-3.2.1.js"></script>
 
     <!-- CUSTOM PLUGINS -->
-    <script src="../../pages/category/index.js"></script>
-    <script src="../../js/alertify.min.js"></script>
+    <!-- <script src="../../pages/category/index.js"></script>
+    <script src="../../js/alertify.min.js"></script> -->
     <!--  -->
 
 
