fixed bundles page and added modal

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
 
     <!-- SCREENSAVER VIEW -->
     <div id="page-screensaver" class="view" data-statusbar="white" >
-      <div class="screensaver-main-content" onclick="app.gotoCategoryPage()">
-        
+      <div class="screensaver-main-content">
+        <div id="screensaver"></div>
+        <div class="swiper-container">
+          <div id="screensaver-swiper-wrapper" class="swiper-wrapper" onclick="app.gotoCategoryPage()"></div>
+          </div>
       </div>
     </div>
 
